syntax = "proto3";

service NoteService{
    rpc List (Note) returns (NoteList){};
    rpc Insert (Note) returns (Note);
   rpc Get (Request) returns (Articles);
}

message Empty {}
message Note {
   string id = 1;
   string title = 2;
   string content = 3;
}
message NoteList {
   repeated Note notes = 1;
}
message Request{
    string req = 1;
    string tag =2;
}
message Articles{
    repeated Article articles = 1;
}

message Article{
    required int32 _id = 1;
    repeated string tags =2;
    string status = 3;
    bool mobile = 4;
    repeated string images = 5;
    string link = 6;
    string title = 7;
    string sapo = 8 ;
    string publicDate = 9;
    string thumbnail = 10;
    message Category{
        int64 id = 1;
        string name = 2;
    };
    Category category = 11;
    message Website{
        int64 id = 1;
        string name = 2;
    };
    Website website = 12;
    required string text = 13;
    required string sourceCode = 14;  
    required int64 numberOfWords = 15;
    repeated string sentences = 16;
    string createdAt = 17; 
    string updatedAt = 18;
}

message User{
    string _id = 1;
    string username = 2;
    string password = 3;
    
}